force-app/main/default/objects/Store_Item__c/Store_Item__c.object-meta.xml
<CustomObject>
    <description>Conjunction object for Item Master and Unit
Label changed to Inventory Item from Store Item</description>
    <label>Inventory Item</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Inventory Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>