force-app/main/default/objects/Store_Item__c/fields/Active_Auto_Purchase_Request__c.field-meta.xml
<CustomField>
    <fullName>Active_Auto_Purchase_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Auto-Purchase Request</label>
    <referenceTo>Purchase_Request__c</referenceTo>
    <relationshipName>Store_Items</relationshipName>
    <type>Lookup</type>
</CustomField>