force-app/main/default/objects/Store_Item__c/fields/Base_Store__c.field-meta.xml
<CustomField>
    <fullName>Base_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The default store where the item will be requested for.
E.g. Roma Base Camp OR Moomba Depot Camp</inlineHelpText>
    <label>Base Store</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Base_Store__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Inventory Items (Base Store)</relationshipLabel>
    <relationshipName>Inventory_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>