force-app/main/default/objects/Store_Item__c/fields/Base_Store_Item__c.field-meta.xml
<CustomField>
    <fullName>Base_Store_Item__c</fullName>
    <formula>AND(Store_Unit__c = Base_Store__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked if Store (Unit) is equal to Base Store.</inlineHelpText>
    <label>Base Store Item</label>
    <type>Checkbox</type>
</CustomField>