force-app/main/default/objects/Store_Item__c/fields/Below_Minimum_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Below_Minimum_Stocks__c</fullName>
    <description>Less than minimum stocks without auto-purchase request.</description>
    <formula>AND(
 NOT( ISBLANK( Minimum_Quantity_for_Restocking__c ) ) ,
 Stock_Available_formula__c &lt; Minimum_Quantity_for_Restocking__c ,
 ISBLANK(  Active_Auto_Purchase_Request__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Below Minimum Stocks</label>
    <type>Checkbox</type>
</CustomField>