force-app/main/default/objects/Store_Item__c/fields/Bin_Location__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location__c</fullName>
    <label>Bin Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>