force-app/main/default/objects/Store_Item__c/fields/Default_ReOder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_ReOder_Quantity__c</fullName>
    <label>Maximum ReOrder Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>