force-app/main/default/objects/Store_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Active Inventory Items are allowed</errorMessage>
        <filterItems>
            <field>Inventory_Item__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Store_Items</relationshipName>
    <type>Lookup</type>
</CustomField>