force-app/main/default/objects/Store_Item__c/fields/Item_and_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_and_Store_ID__c</fullName>
    <description>Combination of Item Name ID and Store ID to be used for checking duplicate records.</description>
    <label>Item and Store ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>