force-app/main/default/objects/Store_Item__c/fields/Minimum_Quantity_for_Restocking__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity_for_Restocking__c</fullName>
    <label>Minimum Quantity for Restocking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>