force-app/main/default/objects/Store_Item__c/fields/My_Store_Item__c.field-meta.xml
<CustomField>
    <fullName>My_Store_Item__c</fullName>
    <formula>OR(
  Store_Unit__r.Unit_Manager__c   =  $User.Id,
  Store_Unit__r.Manager__c  =  $User.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Store Item</label>
    <type>Checkbox</type>
</CustomField>