force-app/main/default/objects/Store_Item__c/fields/Non_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Non_Inventory_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Inventory Item</label>
    <type>Checkbox</type>
</CustomField>