force-app/main/default/objects/Store_Item__c/fields/S_Number__c.field-meta.xml
<CustomField>
    <fullName>S_Number__c</fullName>
    <description>Item Code</description>
    <formula>Inventory_Item__r.Store_Item_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S Number</label>
    <type>Text</type>
</CustomField>