force-app/main/default/objects/Store_Item__c/fields/Send_Directly_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Send_Directly_To_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Directly To Order</label>
    <type>Checkbox</type>
</CustomField>