force-app/main/default/objects/Store_Item__c/fields/Stock_Available_formula__c.field-meta.xml
<CustomField>
    <fullName>Stock_Available_formula__c</fullName>
    <formula>Stock_On_Hand__c - ( Stock_Committed_formula__c +  Stock_In_Transit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stock On-hand less Stock Committed and Stock In Transit</inlineHelpText>
    <label>Stock - Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>