force-app/main/default/objects/Store_Item__c/fields/Stock_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Stock_Cancelled__c</fullName>
    <label>Stock – Cancelled</label>
    <summarizedField>Purchase_Request__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Request__c.Source_Store_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>