force-app/main/default/objects/Store_Item__c/fields/Stock_Committed_formula__c.field-meta.xml
<CustomField>
    <fullName>Stock_Committed_formula__c</fullName>
    <formula>Stock_Pick_List__c +  Stock_Packing_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock - Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>