force-app/main/default/objects/Store_Item__c/fields/Stock_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Stock_On_Hand__c</fullName>
    <label>Stock - On-Hand</label>
    <summarizedField>Purchase_Request_Stock__c.Quantity__c</summarizedField>
    <summaryForeignKey>Purchase_Request_Stock__c.Store_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>