force-app/main/default/objects/Store_Item__c/fields/Store_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Item_Code__c</fullName>
    <label>SCode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>