force-app/main/default/objects/Store_Item__c/fields/Store_Unit__c.field-meta.xml
<CustomField>
    <fullName>Store_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store (Unit)</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Store_Items</relationshipName>
    <type>Lookup</type>
</CustomField>