force-app/main/default/objects/Store_Item__c/listViews/Inventory_Loft.listView-meta.xml
<ListView>
    <fullName>Inventory_Loft</fullName>
    <columns>NAME</columns>
    <columns>Store_Unit__c</columns>
    <columns>S_Number__c</columns>
    <columns>Inventory_Item__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Stock_Available_formula__c</columns>
    <columns>Minimum_Quantity_for_Restocking__c</columns>
    <columns>Default_ReOder_Quantity__c</columns>
    <columns>Base_Store__c</columns>
    <columns>Send_Directly_To_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bin_Location__c</field>
        <operation>contains</operation>
        <value>LOFT</value>
    </filters>
    <label>Inventory | Loft</label>
</ListView>