force-app/main/default/objects/Store_Item__c/listViews/Inventory_Rig_22_All.listView-meta.xml
<ListView>
    <fullName>Inventory_Rig_22_All</fullName>
    <columns>NAME</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Inventory_Item__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Stock_Available_formula__c</columns>
    <columns>Minimum_Quantity_for_Restocking__c</columns>
    <columns>Default_ReOder_Quantity__c</columns>
    <columns>Send_Directly_To_Order__c</columns>
    <columns>Base_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Store_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 22</value>
    </filters>
    <label>Inventory / Rig 22 - All</label>
</ListView>