force-app/main/default/objects/Store_Item__c/listViews/Inventory_Roma_AE_Stores.listView-meta.xml
<ListView>
    <fullName>Inventory_Roma_AE_Stores</fullName>
    <columns>NAME</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Inventory_Item__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Stock_Available_formula__c</columns>
    <columns>Minimum_Quantity_for_Restocking__c</columns>
    <columns>Default_ReOder_Quantity__c</columns>
    <columns>Send_Directly_To_Order__c</columns>
    <columns>Base_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Store_Unit__c</field>
        <operation>contains</operation>
        <value>Rma AE - Stores</value>
    </filters>
    <label>Inventory / Roma AE Stores</label>
</ListView>