force-app/main/default/objects/Store_Item__c/listViews/My_Store_Items.listView-meta.xml
<ListView>
    <fullName>My_Store_Items</fullName>
    <columns>NAME</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Stock_Available_formula__c</columns>
    <columns>Minimum_Quantity_for_Restocking__c</columns>
    <columns>Default_ReOder_Quantity__c</columns>
    <columns>Send_Directly_To_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Store_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Available Store Items</label>
</ListView>