force-app/main/default/objects/Store_Item__c/listViews/Roma_Stores_Store_Items.listView-meta.xml
<ListView>
    <fullName>Roma_Stores_Store_Items</fullName>
    <columns>NAME</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Bin_Location__c</columns>
    <columns>Stock_Available_formula__c</columns>
    <columns>Minimum_Quantity_for_Restocking__c</columns>
    <columns>Default_ReOder_Quantity__c</columns>
    <columns>Send_Directly_To_Order__c</columns>
    <columns>Base_Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Base_Store__c</field>
        <operation>equals</operation>
        <value>Stores - Roma</value>
    </filters>
    <filters>
        <field>Bin_Location__c</field>
        <operation>contains</operation>
        <value>SHF</value>
    </filters>
    <label>Roma Stores - Store Items</label>
</ListView>